# learning-engine

./: .gitignore  CLAUDE.md
01-backend/: README.md  pyproject.toml  test_convert.py
01-backend/cli/: __init__.py  ingest.py
01-backend/core/: __init__.py  node_schema.py  tree_engine.py
01-backend/services/: __init__.py  llm_factory.py  local_llm.py
02-frontend/public/: tree-visualizer.html
