[project]
name = "att-backend"
version = "0.1.0"
description = "Active-Textbook-Tutor backend - Tree decomposer and agentic learning system"
requires-python = ">=3.12"
authors = [
    { name = "ATT Team" }
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.20",
    "marker-pdf>=0.2",
    "loguru>=0.7",
    "openai>=1.0",
    "anthropic>=0.25",
    "tenacity>=8.0",
    "typer>=0.12",
    "aiofiles>=23.0",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-aiofiles>=23.0",
]

[project.scripts]
att-ingest = "cli.ingest:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "services", "cli"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
